# ROS1_course

./: ur_reachable1_x_y  ur_reachable2_x_y  ur_reachable4_x_y  ur_reachable5_x_y
xxc283_p1/: xxc283_p1_writeup.doc
xxc283_p2/: xxc283_p2_writeup.doc
xxc283_p2/new_ps2/: CMakeLists.txt  README.md  package.xml
xxc283_p2/new_ps2/src/: vel_cmd_client.cpp  vel_cmd_service.cpp
xxc283_p2/new_ps2/srv/: ServiceMsg.srv
xxc283_p3/p3/: CMakeLists.txt  README.md  package.xml
xxc283_p3/p3/action/: command.action
xxc283_p3/p3/src/: vel_cmd_actionclient.cpp  vel_cmd_actionserver.cpp
xxc283_p4/: xxc283_p4_writeup.doc
xxc283_p4/p4/: CMakeLists.txt  minimal_robot_description1.urdf  package.xml
xxc283_p4/p4/src/: controller.cpp  vel_publisher.cpp
xxc283_p5/: xxc283_p5_writeup.doc
xxc283_p5/p5/: CMakeLists.txt  minimal_robot_description_w_jnt_ctl1.urdf  minimal_robot_w_jnt_ctl1.launch  package.xml
xxc283_p5/p5/control_config1/: Three_dof_ctl_params.yaml
xxc283_p5/p5/src/: position_publisher.cpp~
xxc283_p6/: xxc283_p6_writeup.doc
xxc283_p6/p6/: CMakeLists.txt  package.xml
xxc283_p6/p6/src/: lidar_transformer1.cpp~
xxc283_p7/: xxc283_p7_writeup.doc
xxc283_p7/p7/: CMakeLists.txt  CMakeLists.txt~  left_move.jsp  mymove.jsp~  package.xml  right_move.jsp
xxc283_p8/: view_ur10_reachable.m  xxc283_p8_writeup.doc
xxc283_p8/p8/: CMakeLists.txt  CMakeLists.txt~  package.xml
xxc283_p8/p8/src/: ur10_reachability_from_above.cpp  (+1 more)
xxc283_p9/: sticky_fingers_manip_fncs.cpp  xxc283_p9_writeup.doc
xxc283_p9/p9/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
(+5 files in other folders)
